<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTripFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/trip_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/trip_name_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/city_search_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/city_search_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/current_picked_date_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/planned_date_text" />

        <Button
            android:id="@+id/pick_date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_date_text" />

        <Button
            android:id="@+id/search_and_add_trip_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_button_text" />

        <Button
            android:id="@+id/cancel_add_trip_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_text" />
    </LinearLayout>

</FrameLayout>