<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTripFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/goTo_add_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locations_recyclerView"
            android:layout_alignParentStart="true"
            android:layout_gravity="bottom"
            android:layout_marginTop="525dp"
            android:text="@string/add_location_text"
            app:layout_constraintEnd_toStartOf="@+id/finish_add_location_button"
            app:layout_constraintStart_toEndOf="@+id/change_date_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/finish_add_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locations_recyclerView"
            android:layout_alignParentStart="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginTop="525dp"
            android:layout_marginEnd="15dp"
            android:text="@string/finish_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/goTo_add_location_button"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/locations_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border"
            app:layout_constraintBottom_toTopOf="@+id/current_date_in_edit_trip_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/change_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="525dp"
            android:layout_marginEnd="10dp"
            android:text="@string/change_date_text"
            app:layout_constraintEnd_toStartOf="@+id/goTo_add_location_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_date_in_edit_trip_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/planned_date_text"
            app:layout_constraintBottom_toTopOf="@+id/change_date_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locations_recyclerView"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>